--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+}
+
+.city {
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .App-logo {
