--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
   font-size: 16px;
 }
 
+.city p {
+  margin: 0;
+}
+
+.country {
+  line-height: 0;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -38,4 +46,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.CloudsIcon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' id='Capa_1' x='0' y='0' viewBox='0 0 508 508' xml:space='preserve'%3E%3Cpath d='M342.3 158.3v16.4c34.1 0 61.8 27.7 61.8 61.8h16.4c0-43.1-35.1-78.2-78.2-78.2z' data-original='%23000000' class='active-path' fill='%23FFF'/%3E%3Cpath d='M455.4 232.7c-2-60.7-52-109.4-113.2-109.4-28 0-54.6 10.2-75.4 28.8-6.8-1.7-13.8-2.5-20.9-2.5-7.5 0-14.7 1-21.6 2.8-15.1-18.2-37.5-29.1-61.3-29.1-19.2 0-37.5 6.8-52 19.4-4.4-1-9-1.5-13.5-1.5-32.6 0-59.4 25.4-61.7 57.4-21.3 8.1-35.8 28.8-35.8 52 0 30.8 25.1 55.9 55.9 55.9h50.6c0 43.1 35.1 78.2 78.2 78.2h245.1c43.1 0 78.2-35.1 78.2-78.2 0-33.4-21.3-62.9-52.6-73.8zM55.9 290.1c-21.8 0-39.5-17.7-39.5-39.5 0-18 12.2-33.7 29.7-38.2l6.3-1.6-.3-7.9c0-25.1 20.4-45.4 45.4-45.4 10.5 0 18 3.4 18 3.4l3.5-3.4c11.9-11.6 27.5-17.9 44.1-17.9 16.9 0 33 6.9 44.8 18.8-27.8 13.6-47.4 41.6-48.8 74.3-26 9-45.1 31-50.8 57.4H55.9zm373.9 78.2H184.7c-34.1 0-61.8-27.7-61.8-61.8 0-28.1 19.1-52.7 46.5-59.8l6.3-1.6-.2-8.6c0-38.9 31.7-70.6 70.6-70.6 7 0 14 1 20.7 3.1l4.6 1.4 3.5-3.4c18.2-17.7 42.2-27.4 67.4-27.4 53.4 0 96.8 43.4 96.8 97.5l-.2 7.9 6.3 1.6c27.4 7.1 46.5 31.7 46.5 59.8-.1 34.2-27.8 61.9-61.9 61.9z' data-original='%23000000' class='active-path' fill='%23FFF'/%3E%3C/svg%3E");
+  width: 70px;
+  height: 70px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.RainIcon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' id='Capa_1' x='0' y='0' viewBox='0 0 507.9 507.9' xml:space='preserve'%3E%3Cpath d='M81.9 381.9s-41 39.9-41 60.5c0 22.6 18.4 41 41 41s41-18.4 41-41c0-20.6-41-60.5-41-60.5zm0 85c-13.6 0-24.6-11-24.6-24.6 0-8.6 13-25.4 24.6-37.6 11.6 12.1 24.6 29 24.6 37.6 0 13.6-11 24.6-24.6 24.6zM254 381.9s-41 39.9-41 60.5c0 22.6 18.4 41 41 41s41-18.4 41-41c0-20.6-41-60.5-41-60.5zm0 85c-13.6 0-24.6-11-24.6-24.6 0-8.6 13-25.4 24.6-37.6 11.6 12.1 24.6 29 24.6 37.6 0 13.6-11 24.6-24.6 24.6zM426.1 381.9s-41 39.9-41 60.5c0 22.6 18.4 41 41 41s41-18.4 41-41c-.1-20.6-41-60.5-41-60.5zm0 85c-13.6 0-24.6-11-24.6-24.6 0-8.6 13-25.4 24.6-37.6 11.6 12.1 24.6 29 24.6 37.6-.1 13.6-11.1 24.6-24.6 24.6zM73.5 180.2h16.4c0-31.8 25.8-57.6 57.6-57.6v-16.4c-40.8 0-74 33.2-74 74z' data-original='%23000000' class='active-path' fill='%23FFF'/%3E%3Cpath d='M449.5 191.8c-1.8-34.9-28.2-63.9-62.5-69.1-18-58.1-71.9-98.2-133-98.2-41.3 0-79.8 18-106.4 49.6-3-.3-5.7-.4-8.3-.4C85.1 73.7 41 117.8 41 172c0 8.6 1.2 17.1 3.4 25.5C17.2 211.4 0 239.3 0 270.3c0 45.2 36.8 81.9 81.9 81.9H426c45.2 0 81.9-36.8 81.9-81.9.1-36.3-24.1-68.3-58.4-78.5zm-23.4 144H81.9c-36.1 0-65.5-29.4-65.5-65.6 0-26.8 16.1-50.7 41-60.8l7.3-2.9s-7.4-16.8-7.4-34.6c0-45.2 36.8-81.9 81.9-81.9 9.1 0 15.4 1.4 15.4 1.4s31.3-50.5 99.4-50.5c55.6 0 104.4 37.6 118.7 91.4l1.5 5.7 5.8.4c29.8 2.1 53.2 27.2 53.2 57.1l-.4 9.2 6.8 1.4c30.2 6.3 52.1 33.3 52.1 64.1-.1 36.2-29.5 65.6-65.6 65.6z' data-original='%23000000' class='active-path' fill='%23FFF'/%3E%3C/svg%3E");
+  width: 60px;
+  height: 60px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
