--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
 
 .App {
   text-align: center;
@@ -7,8 +7,19 @@
 }
 
 .city {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
+}
+
+.cityItem {
+  width: 33%;
+}
+
+@media screen and (max-width: 768px) {
+      
+  .cityItem {
+    width: 100%;
+  }
 }
 
 .city p {
