Changes layout and cards colors

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,13 @@
 
 .cityItem {
   width: 33%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #ccc;
+  color: #555;
+  max-width: 200px;
 }
 
 @media screen and (max-width: 768px) {
