--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,24 @@
   text-align: center;
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.container {
+  flex: 1;
+  display : flex;
+  align-items: stretch;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+  min-height: 100vh;
+  background: #4a59ed;
+  color: #fff;
+  padding: 32px ;
 }
 
 .city {
@@ -12,14 +30,16 @@
 }
 
 .cityItem {
-  width: 33%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  width:33.33%;
   background-color: #ccc;
   color: #555;
   max-width: 200px;
+  max-height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
 }
 
 @media screen and (max-width: 768px) {
